# tersity

./: README.md  examples.vec  install.sh  standard  style
compiler/: CMakeLists.txt  makefile
compiler/source/: main.cpp
compiler/source/interface/program/: configuration.hpp
compiler/source/interface/utility/: files.hpp  smart_pointer.hpp  utility.hpp
compiler/source/interface/utility/errors/: error.hpp  result.hpp
compiler/source/interface/vector/: generation.hpp  language.hpp  lexing.hpp  parsing.hpp
compiler/source/interface/vector/logging/: logging.hpp
compiler/source/interface/vector/parsing/: expressions.hpp  functions.hpp  patterns.hpp  statements.hpp
example/: makefile  test.sh
example/source/: main.vec
example/suite/: compiler
stdlib/: makefile  vector
stdlib/source/: bootstrap.vec
stdlib/source/system/: exit.asm  print_character.asm  print_n.asm
